<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".api_result">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:text="@string/valueAttractions"
        android:textColor="#000000"
        android:textColorLink="#D31E1E"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/txtvalue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtadress" />

    <TextView
        android:id="@+id/txtdrip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginBottom="128dp"
        android:text="@string/roupa_de_frio"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/txtvalue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="11dp"
        android:text="@string/_16_30"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/txttemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginBottom="30dp"
        android:text="@string/_21"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginLeft="37dp"
        android:text="@string/dripIndicated"
        android:textColor="#000000"
        android:textColorLink="#D31E1E"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/txtdrip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txttemp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginLeft="37dp"
        android:text="@string/localTemperature"
        android:textColor="#000000"
        android:textColorLink="#D31E1E"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/txttemp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtdesc" />

    <TextView
        android:id="@+id/txtdesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:text="@string/torre_de_ferro_gigante"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descAttractions"
        android:textColor="#000000"
        android:textColorLink="#D31E1E"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/txtdesc"
        app:layout_constraintStart_toStartOf="@+id/txtvalue"
        app:layout_constraintTop_toBottomOf="@+id/txtvalue" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="61dp"
        android:text="@string/nameAttractions"
        android:textColor="#000000"
        android:textColorLink="#D31E1E"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/txtname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtadress"
        android:layout_width="175dp"
        android:layout_height="21dp"
        android:layout_marginStart="38dp"
        android:layout_marginLeft="38dp"
        android:layout_marginEnd="38dp"
        android:layout_marginRight="38dp"
        android:layout_marginBottom="59dp"
        android:text="@string/champs_de_mars_no_n_5_da_avenida_anatole_de_france"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.03"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/txtcity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp"
        android:text="@string/paris"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/txtname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:text="@string/torre_eiffel"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addressAttractions"
        android:textColor="#000000"
        android:textColorLink="#D31E1E"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/txtadress"
        app:layout_constraintStart_toStartOf="@+id/txtadress"
        app:layout_constraintTop_toBottomOf="@+id/txtcity" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:text="@string/cityAttractions"
        android:textColor="#000000"
        android:textColorLink="#D31E1E"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/txtcity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtname" />

</androidx.constraintlayout.widget.ConstraintLayout>